--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       </div>
       <div class="col-lg-12">
         <a href="mailto:patel.riya0904@gmail.com"><span class="fa fa-envelope social"></span></a>
-        <a href="https://riya49.github.io/portfolio/"  target="_blank"> <span class="fab fa-github social"></span></a>
+        <a href="https://github.com/Riya49"  target="_blank"> <span class="fab fa-github social"></span></a>
         <a href="https://www.linkedin.com/in/riya-patel-61855a215" target="_blank"><span class="fab fa-linkedin social"></span></a>
         <a href="tel:6353813501"><span class="fa fa-phone social"></span></a>
       </div>
