--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </P>
       </div>
       <div class="col-lg-12">
-        <button><a href="img/Riya patel.pdf" download>download Resume</a></button>
+        <button><a href="img/Riya-resume.pdf" download>download Resume</a></button>
       </div>
       
   </div>
