--- a/index.html
+++ b/index.html
@@ -214,28 +214,28 @@
    
   </div>
 
-  <!--<div class="row"  data-aos="fade-up">
+  <div class="row"  data-aos="fade-up">
 
    <div class="col-lg-4 col-md-4 col-sm-4">
      <div class="projects" >
-       <img src="img/techinal.png" alt="">
-       <button><a href="https://bhabna1422.github.io/technical/" target="_blank">watch</a></button>
+       <img src="img/sixteenclothing.png" alt="">
+       <button><a href="https://riya49.github.io/sixteencothing/" target="_blank">watch</a></button>
      </div>
    </div>
    <div class="col-lg-4 col-md-4 col-sm-4">
     <div class="projects">
-      <img src="img/designp.png" alt="">
-      <button><a href="https://bhabna1422.github.io/design/" target="_blank">watch</a></button>
+      <img src="img/intensifyy.png" alt="">
+      <button><a href="https://riya49.github.io/intensifyy/" target="_blank">watch</a></button>
     </div>
-  </div>-->
-  <!--<div class="col-lg-4 col-md-4 col-sm-4">
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-4">
     <div class="projects">
-      <img src="img/sixteenclothing.png" alt="">
-      <button><a href="https://bhabna1422.github.io/sixteenclothing/" target="_blank">watch</a></button>
+      <img src="img/projection.png" alt="">
+      <button><a href="https://riya49.github.io/projection/" target="_blank">watch</a></button>
     </div>
   </div>
   
- </div>-->
+ </div>
 
  <!--<div class="row"  data-aos="fade-up">
     
